--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  math_expressions: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +59,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/logo.png
+    - assets/camping.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
